--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,11 @@ android {
 
 dependencies {
 
-    runtimeOnly 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.2'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.5.2'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
