--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PRACTICA_FIREBASE">
         <activity
+            android:name=".ui.modal.ModalActualizarArea"
+            android:exported="false" />
+        <activity
+            android:name=".ui.modal.ModalMostrarAreas"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
